# xwm

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  instal_sdk.sh
docs/: syk_lang.md
include/syk/: scope.hpp
include/xuci/: architecture.hpp  base_architecture.hpp  core.hpp  log.hpp
include/xuci/syk/: base_type.hpp  class_type.hpp  defs.hpp  primitive_type.hpp
include/xuci/syk/lexing/: validate.hpp
include/xuci/syk/types/: syk_logical.hpp  syk_numeric.hpp
include/xuci/types/: memory.hpp  register.hpp
include/xwm/: base_architecture.hpp  core.hpp  orchestrator.hpp
include/xwm/syk/: scope.hpp
include/xwm/syk/types/: basic_types.hpp  variable.hpp
include/xwm/types/: register.hpp
include/xwm/xasm/: isa.hpp
isas/origin/: x32.yml
src/: base_architecture.cpp  main.cpp
src/orchestrator/: constructor.cpp  core.cpp  load_architecture.cpp  process_args.cpp
tests/: arch.cpp  main.syk  main.xasm32
tests/include/xuci/: base_architecture.hpp  core.hpp  orchestrator.hpp
tests/include/xuci/types/: memory.hpp  register.hpp
tests/include/xwm/: log.hpp
tests/include/xwm/types/: memory.hpp
tests/src/: base_architecture.cpp
toolchains/: linux.mk  windows.mk
